# pysilkit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: example_can.py
src/pysilkit/: __init__.py  can_controller.py  context.py  participant.py  publisher.py  silkit.py  subscriber.py  time_master.py  time_slave.py
src/pysilkit/utilities/: __init__.py
